# talentbase-v1

./: .dockerignore  .env.example  .gitignore  .roomodes  AGENTS.md  CLAUDE.md  DOCKER.md  INFRASTRUCTURE_REFACTORING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  coverage.xml  manage.py  pyproject.toml  pytest.ini
apps/api/applications/: admin.py  models.py
apps/api/applications/migrations/: 0001_initial.py  0002_initial.py
apps/api/applications/tests/: __init__.py  test_models.py
apps/api/authentication/: admin.py  models.py  serializers.py  views.py
apps/api/authentication/migrations/: 0001_initial.py  0002_add_user_status_audit.py  0003_add_user_password_reset_fields.py
apps/api/authentication/services/: __init__.py  registration.py
apps/api/authentication/tests/: __init__.py  test_company_registration.py  test_models.py  test_services.py  test_views.py
apps/api/candidates/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/api/candidates/migrations/: 0001_initial.py  0002_make_fields_optional_for_registration.py  0003_add_profile_photo_and_pitch_video.py  0004_add_story_3_2_fields.py  0005_add_csv_import_fields.py
apps/api/candidates/services/: csv_import.py  sharing.py
apps/api/candidates/tests/: __init__.py  test_admin_creation.py  test_csv_import.py  test_models.py  test_public_endpoints.py  test_serializers.py  test_sharing_service.py
apps/api/companies/: admin.py  models.py
apps/api/companies/migrations/: 0001_initial.py  0002_alter_companyprofile_cnpj.py
apps/api/companies/tests/: __init__.py
apps/api/core/: models.py  permissions.py  tasks.py  views.py
apps/api/core/migrations/: 0001_add_email_log_model.py  0002_emaillog_task_id_nullable.py
apps/api/core/tests/: test_database.py  test_health_endpoint.py  test_permissions.py  test_redis.py  test_tasks.py
apps/api/core/utils/: s3.py
apps/api/jobs/: admin.py  models.py
apps/api/jobs/migrations/: 0001_initial.py
apps/api/jobs/tests/: __init__.py
apps/api/matching/: admin.py  models.py
apps/api/matching/migrations/: 0001_initial.py
apps/api/matching/tests/: __init__.py
apps/api/talentbase/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
apps/api/talentbase/settings/: base.py  development.py  production.py  test.py
apps/api/templates/emails/: base.html  candidate_contact_request.html  candidate_registration.html  candidate_registration.txt  company_approved.html  (+7 more)
apps/api/user_management/: __init__.py  apps.py  serializers.py  urls.py  views.py
docs/: PRD.md  (+9 more)
(+251 files in other folders)
